--- a/share.html
+++ b/share.html
@@ -4,7 +4,7 @@
     <title>Share</title>
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
     <script src="js/jquery-1.4.2.min.js" type="text/javascript"></script>
-    <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
+  <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
      <script src="js/json2.js" type="text/javascript"></script>
     <script src="js/date.format.js" type="text/javascript"></script>
@@ -30,14 +30,37 @@
 
             // set effect from select menu value
             $("#button").click(function () {
-               //alert("button");
+              // alert("button");
                 runEffect();
                 return false;
+            });
+            $("#imbSend").click(function () {
+                Share();
             });
         });
     </script>
     <!-- toggle menu ends -->
     <script type="text/javascript">
+        function Share() {
+           // alert($('#txtYourFriendEmail').val());
+            //alert($('#txtYourFriendName').val());
+            $.ajax({
+                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/SendEmailReport',
+                //url: 'WebService.asmx/SendEmailReport',
+                // url: 'http://projectxmobile.2bvision.com/WebService.asmx/SendEmailReport',
+                type: 'POST',
+                data: "{'EmailId': '" + $('#txtYourFriendEmail').val() + "','FriendsName': '" + $('#txtYourFriendName').val() + "'}",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    alert("Shared Successfully");
+
+                },
+                failure: function (errMsg) {
+                    alert("fail");
+                }
+            });
+        }
         function getUrlVars() {
             var vars = [], hash;
             var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
@@ -104,7 +127,7 @@
         }
 
         $(document).ready(function () {
-            //alert("ready");
+           // alert("ready");
             assignLinks();
             GetUsername();
             GetSchoolInfo();
