--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             $("divLoading").fadeIn(400);
             $("divLoading").fadeOut(2000);
             handleLogin();
-            registerPushwoosh($('#txtEmail').val());
+            //registerPushwoosh($('#txtEmail').val());
             UserLogin();
             LoginBusinessAdmin();
             LoginBackOfficeUser();
