--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
     <!--<script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>-->
     <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
-    <script type="text/javascript" charset="utf-8" src="cordova-2.7.0.js"></script>
+    <script type="text/javascript" charset="utf-8" src="cordova.ios.js"></script>
     <script src="js/phonegap-1.4.1.js" type="text/javascript"></script>
     <script src="JS/json2.js" type="text/javascript"></script>
     <script src="JS/date.format.js" type="text/javascript"></script>
@@ -200,7 +200,7 @@
 
                 
                 var prods = $(this).attr('href');
-                alert(prods);
+               // alert(prods);
                 var ref = window.open(prods, '_blank', 'location=yes');
                 
                 return false;
