--- a/UserPledges.html
+++ b/UserPledges.html
@@ -5,6 +5,7 @@
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
     <!--<script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>-->
     <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
+    <script type="text/javascript" charset="utf-8" src="cordova.ios.js"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
     <!-- toggle menu -->
     <script type="text/javascript">
@@ -63,9 +64,18 @@
                                     contentType: "application/json; charset=utf-8",
                                     dataType: "json",
                                     success: function (response) {
-                                        
+
+                                        function alertDismissed() {
+
+                                        }
+                                        navigator.notification.alert(
+                                                 'Pledge Donated Successfully',  // message
+                                                     alertDismissed,         // callback
+                                                      'Thank You!',            // title
+                                                         'Done'                  // buttonName
+                                                               );
                                        
-                                        alert("Pledge Donated Successfully");
+                                        //alert("Pledge Donated Successfully");
                                     },
                                     failure: function (errMsg) {
                                         $('#errorMessage').text(errMsg); //errorMessage is id of the div
