--- a/news.html
+++ b/news.html
@@ -256,7 +256,7 @@
                 <li><a id="lnkAtAGlance">
                     <img src="images/at-a-glane.png" width="35" height="30" alt="" />
                     <p class="marginP">
-                        At a Glance</p>
+                        Home</p>
                 </a></li>
                 <li><a id="lnkNews" class="active">
                     <img src="images/nes-icon.png" width="35" height="30" alt="" />
@@ -286,7 +286,7 @@
                 <li><a id="lnkMyDetail">
                     <img src="images/my-detail-icon.png" width="35" height="30" alt="" />
                     <p class="marginP">
-                        My detail</p>
+                        My Details</p>
                 </a></li>
                 <li><a id="lnkShare">
                     <img src="images/Share-icon.png" width="35" height="30" alt="" />
