--- a/mydetail.html
+++ b/mydetail.html
@@ -6,6 +6,7 @@
     <!--<script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>-->
     <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
+    <script type="text/javascript" charset="utf-8" src="cordova.ios.js"></script>
     <!-- toggle menu -->
     <script type="text/javascript">
         $(function () {
@@ -142,7 +143,17 @@
                 contentType: "application/json; charset=utf-8",
                 dataType: "json",
                 success: function (response) {
-                    alert("Details Updated Successfully!");
+                    // alert("Details Updated Successfully!");
+                    function alertDismissed() {
+
+                    }
+                    navigator.notification.alert(
+                             'Details Updated Successfully!',  // message
+                                 alertDismissed,         // callback
+                                  ' ',            // title
+                                     'Ok'                  // buttonName
+                                           );
+
                     //                    for (i = 0; i < Kewords.length; i++) {
                     //                        var FirstName = Kewords[i].FirstName;
                     //                        $("#txtFirstName").val(Kewords[i].FirstName);
@@ -195,7 +206,7 @@
                 <li><a id="lnkAtAGlance">
                     <img src="images/at-a-glane.png" width="35" height="30" alt="" />
                     <p class="marginP">
-                        At a Glance</p>
+                        Home</p>
                 </a></li>
                 <li><a id="lnkNews">
                     <img src="images/nes-icon.png" width="35" height="30" alt="" />
@@ -225,7 +236,7 @@
                 <li><a id="lnkMyDetail" class="active">
                     <img src="images/my-detail-icon.png" width="35" height="30" alt="" />
                     <p class="marginP">
-                        My detail</p>
+                        My Details</p>
                 </a></li>
                 <li><a id="lnkShare">
                     <img src="images/Share-icon.png" width="35" height="30" alt="" />
