--- a/calendardetail.html
+++ b/calendardetail.html
@@ -119,7 +119,7 @@
                         milli2 = Kewords[i].EventEndDate.replace(/\/Date\((-?\d+)\)\//, '$1');
 //                        var date1 = new Date(parseInt(milli)).format("dd mmm,yyyy (HH:mm:ss)");
                         //                        var date2 = new Date(parseInt(milli2)).format("dd mmm,yyyy (HH:mm:ss)");
-                        var date1 = new Date(parseInt(milli)).format("hh:mm tt ddd mmm dd ,yyyy");
+                        var date1 = new Date(parseInt(milli)).format("ddd mmm dd ,yyyy");
                         var date2 = new Date(parseInt(milli2)).format("ddd mmm dd ,yyyy");
                         var Location=Kewords[i].EventLocation;
                         document.getElementById("dlCalender").innerHTML += "<dt>" + Kewords[i].CalendarEventTitle + "</dt><dd><span>" + date1 + " to  " + date2 + ", " + Location + "</span><br /><br /><br />" + Kewords[i].CalendarEventDescription + "</dd>";
