--- a/UserPledges.html
+++ b/UserPledges.html
@@ -5,7 +5,7 @@
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
     <!--<script src="js/jquery-1.4.2.min.js" type="text/javascript"></script>-->
     <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
-    <script src="cordova-2.7.0.js" type="text/javascript"></script>
+    <script src="cordova.ios.js" type="text/javascript"></script>
      <script src="js/phonegap-1.4.1.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
     
