--- a/UserPledges.html
+++ b/UserPledges.html
@@ -109,7 +109,7 @@
         $(document).ready(function () {
             
             $("#ext-link").click(function () {
-                alert("ys");
+                //alert("ys");
                 var Email = window.localStorage["username"];
                 var Id = getUrlVars()["value"];
                 window.open('http://www.intouchcommunicator.com/Webcommunicator/UserDonation.aspx?Id='+ Id +"&username="+ Email, '_system');
@@ -239,7 +239,7 @@
                     Donation
                 </h3>
                 <!--<a id="ext-link" href="#">Google it</a>-->
-                <div class="view-btn" id="ext-link">Donate</div> 
+                <div class="view-btn" id="ext-link">Tap To Donate</div> 
             </center>
             
             </div>
